Fix some warnings ...